SERVER-128328 Utilize EstimationSource::Sampling in makeScaledEstimate for persistent samples (#56011)

Co-authored-by: Sidarth Krishna <sidarth.krishna@mongodb.com>
GitOrigin-RevId: cf7a9170b0170fc7b76d6980f08f6699ded20cf7